--- a/src/app/components/example/example.component.scss
+++ b/src/app/components/example/example.component.scss
@@ -1,10 +1,12 @@
 .example {
     padding: 10px;
     margin: 10px;
+    border: 2px solid transparent;
+    text-align: justify;
 
     &:hover {
         cursor: pointer;
-        border: solid 2px #04AA6D;
+        border: 2px solid #04AA6D;
     }
 }
 
